devops/kustomize/base/app/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dashboard
  namespace: default
  labels:
    name: dashboard
    part-of: hsb
    version: 1.0.0
    component: app
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Route for dashboard application.
spec:
  host: hsb-dev.apps.emerald.devops.gov.bc.ca
  path: ""
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
    # caCertificate: ""
    # certificate: ""
    # key: ""
  to:
    kind: Service
    name: dashboard
    weight: 100
# ---
# kind: Route
# apiVersion: route.openshift.io/v1
# metadata:
#   name: dashboard-tls
#   namespace: default
#   annotations:
#     description: Route for dashboard application.
#   labels:
#     name: dashboard
#     part-of: hsb
#     version: 1.0.0
#     component: app
#     managed-by: kustomize
#     created-by: jeremy.foster
# spec:
#   host: hsb.gov.bc.ca
#   path: ""
#   port:
#     targetPort: 8080-tcp
#   tls:
#     insecureEdgeTerminationPolicy: Redirect
#     termination: edge
#     # caCertificate: ""
#     # certificate: ""
#     # key: ""
#   to:
#     kind: Service
#     name: dashboard
#     weight: 100
