devops/kustomize/base/app/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-app-to-api
  labels:
    name: enable-app-to-api
    part-of: hsb
    version: 1.0.0
    component: app
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the app to communicate with the api
spec:
  podSelector:
    matchLabels:
      part-of: hsb
      component: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              part-of: hsb
              component: app
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: enable-app-to-internet
  labels:
    name: enable-app-to-internet
    part-of: hsb
    version: 1.0.0
    component: app
    managed-by: kustomize
    created-by: jeremy.foster
  annotations:
    description: Enable the app to communicate with the internet
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 142.34.229.249/32
        - ipBlock:
            cidr: 142.34.94.249/32
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      part-of: hsb
      component: app
  policyTypes:
    - Egress
